# jr-hz-relation

./: .gitignore  .mise.toml  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  LICENSE  README.md  eslint.config.mjs  package.json  pyproject.toml  release.config.mjs  tsconfig.json
.github/workflows/: ci.yml  release.yml
assets/data/: test-particle-data.json
